--- a/Unit 2/part 5/angular-login/package.json
+++ b/Unit 2/part 5/angular-login/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-products",
+  "name": "angular-login",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,23 +7,21 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0-rc.5",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~9.0.0-rc.5",
     "@angular/compiler": "~9.0.0-rc.5",
     "@angular/core": "~9.0.0-rc.5",
     "@angular/forms": "~9.0.0-rc.5",
-    "@angular/localize": "^9.0.0-rc.5",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~9.0.0-rc.5",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.5",
     "@angular/router": "~9.0.0-rc.5",
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
-    "bootstrap": "^4.3.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -33,9 +31,12 @@
     "@angular/cli": "~9.0.0-rc.5",
     "@angular/compiler-cli": "~9.0.0-rc.5",
     "@angular/language-service": "~9.0.0-rc.5",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.4.0",
+    "@types/fb": "0.0.23",
+    "@types/gapi": "0.0.39",
+    "@types/gapi.auth2": "0.0.51",
+    "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
