--- a/Unit 3/ionic-capacitor/angular.json
+++ b/Unit 3/ionic-capacitor/angular.json
@@ -36,6 +36,9 @@
                 "input": "./node_modules/mapbox-gl/dist/mapbox-gl.css"
               },
               {
+                "input": "./node_modules/@mapbox/mapbox-gl-geocoder/lib/mapbox-gl-geocoder.css"
+              },
+              {
                 "input": "src/theme/variables.scss"
               },
               {
