--- a/Unit 3/ionic-capacitor/package.json
+++ b/Unit 3/ionic-capacitor/package.json
@@ -21,10 +21,12 @@
     "@angular/router": "~9.0.0-rc.11",
     "@capacitor/android": "^1.4.0",
     "@capacitor/core": "1.4.0",
+    "@codetrix-studio/capacitor-google-auth": "^1.4.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@proteansoftware/capacitor-start-navigation": "^1.0.0",
     "core-js": "^2.5.4",
     "mapbox-gl": "^0.54.1",
     "ngx-mapbox-gl": "^4.3.0",
@@ -43,6 +45,8 @@
     "@angular/language-service": "~9.0.0-rc.11",
     "@capacitor/cli": "1.4.0",
     "@ionic/angular-toolkit": "^2.1.1",
+    "@types/gapi": "0.0.39",
+    "@types/gapi.auth2": "0.0.51",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/mapbox-gl": "^1.6.3",
