--- a/Unit 3/ionic-capacitor/android/app/src/main/assets/capacitor.config.json
+++ b/Unit 3/ionic-capacitor/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.example.capacitor",
+  "appId": "com.arturober.capacitor",
   "appName": "Ionic Capacitor",
   "bundledWebRuntime": false,
   "npmClient": "npm",
