--- a/Unit 3/ionic-capacitor/android/app/build.gradle
+++ b/Unit 3/ionic-capacitor/android/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "io.ionic.starter"
+        applicationId "com.arturober.capacitor"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
@@ -15,6 +15,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    configurations {
+        compile.exclude group: 'com.google.zxing'
     }
 }
 
