--- a/Unit 3/ionic-capacitor/android/app/capacitor.build.gradle
+++ b/Unit 3/ionic-capacitor/android/app/capacitor.build.gradle
@@ -11,9 +11,10 @@ apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
     implementation project(':codetrix-studio-capacitor-google-auth')
     implementation project(':proteansoftware-capacitor-start-navigation')
-
+    implementation project(':rdlabo-capacitor-facebook-login')
+    implementation "com.android.support:support-v4:27.+"
 }
-
+apply from: "../../node_modules/phonegap-plugin-barcodescanner/src/android/barcodescanner.gradle"
 
 if (hasProperty('postBuildExtras')) {
   postBuildExtras()
