--- a/Unit 3/ionic-capacitor/android/capacitor.settings.gradle
+++ b/Unit 3/ionic-capacitor/android/capacitor.settings.gradle
@@ -7,3 +7,6 @@ project(':codetrix-studio-capacitor-google-auth').projectDir = new File('../node
 
 include ':proteansoftware-capacitor-start-navigation'
 project(':proteansoftware-capacitor-start-navigation').projectDir = new File('../node_modules/@proteansoftware/capacitor-start-navigation/android')
+
+include ':rdlabo-capacitor-facebook-login'
+project(':rdlabo-capacitor-facebook-login').projectDir = new File('../node_modules/@rdlabo/capacitor-facebook-login/android/@rdlabo/capacitor-facebook-login')
