--- a/Unit 3/ionic-capacitor/package.json
+++ b/Unit 3/ionic-capacitor/package.json
@@ -27,9 +27,12 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@proteansoftware/capacitor-start-navigation": "^1.0.0",
+    "@rdlabo/capacitor-facebook-login": "^1.4.0",
+    "cordova-plugin-flashlight": "^3.2.0",
     "core-js": "^2.5.4",
     "mapbox-gl": "^0.54.1",
     "ngx-mapbox-gl": "^4.3.0",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.10.2"
