--- a/Unit 3/ionic-capacitor/package.json
+++ b/Unit 3/ionic-capacitor/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/pwa-elements": "^1.4.1",
     "@proteansoftware/capacitor-start-navigation": "^1.0.0",
     "core-js": "^2.5.4",
     "mapbox-gl": "^0.54.1",
