--- a/Unit 3/ionic-capacitor/android/app/src/main/AndroidManifest.xml
+++ b/Unit 3/ionic-capacitor/android/app/src/main/AndroidManifest.xml
@@ -81,4 +81,6 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
 
     <uses-permission android:name="android.permission.VIBRATE" />
+
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 </manifest>
