--- a/Unit 3/ionic-capacitor/android/capacitor.settings.gradle
+++ b/Unit 3/ionic-capacitor/android/capacitor.settings.gradle
@@ -2,8 +2,14 @@
 include ':capacitor-android'
 project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
 
+include ':arturober-capacitor-contacts'
+project(':arturober-capacitor-contacts').projectDir = new File('../node_modules/@arturober/capacitor-contacts/android')
+
 include ':codetrix-studio-capacitor-google-auth'
 project(':codetrix-studio-capacitor-google-auth').projectDir = new File('../node_modules/@codetrix-studio/capacitor-google-auth/android')
+
+include ':jeepq-capacitor'
+project(':jeepq-capacitor').projectDir = new File('../node_modules/@jeepq/capacitor/android')
 
 include ':proteansoftware-capacitor-start-navigation'
 project(':proteansoftware-capacitor-start-navigation').projectDir = new File('../node_modules/@proteansoftware/capacitor-start-navigation/android')
