--- a/Unit 3/ionic-capacitor/package.json
+++ b/Unit 3/ionic-capacitor/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.0.0-rc.11",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.11",
     "@angular/router": "~9.0.0-rc.11",
+    "@arturober/capacitor-contacts": "0.0.10",
     "@capacitor/android": "^1.4.0",
     "@capacitor/core": "1.4.0",
     "@codetrix-studio/capacitor-google-auth": "^1.4.0",
@@ -27,6 +28,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/pwa-elements": "^1.4.1",
+    "@jeepq/capacitor": "0.0.1",
     "@proteansoftware/capacitor-start-navigation": "^1.0.0",
     "@rdlabo/capacitor-facebook-login": "^1.4.0",
     "cordova-plugin-flashlight": "^3.2.0",
