--- a/Unit 2/part 6/angular-products/package.json
+++ b/Unit 2/part 6/angular-products/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-rc.5",
-    "@angular/common": "~9.0.0-rc.5",
-    "@angular/compiler": "~9.0.0-rc.5",
-    "@angular/core": "~9.0.0-rc.5",
-    "@angular/forms": "~9.0.0-rc.5",
-    "@angular/localize": "^9.0.0-rc.5",
-    "@angular/platform-browser": "~9.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.5",
-    "@angular/router": "~9.0.0-rc.5",
+    "@angular/animations": "~9.0.0",
+    "@angular/common": "~9.0.0",
+    "@angular/compiler": "~9.0.0",
+    "@angular/core": "~9.0.0",
+    "@angular/forms": "~9.0.0",
+    "@angular/localize": "^9.0.0",
+    "@angular/platform-browser": "~9.0.0",
+    "@angular/platform-browser-dynamic": "~9.0.0",
+    "@angular/router": "~9.0.0",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "bootstrap": "^4.3.1",
@@ -29,10 +29,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.5",
-    "@angular/cli": "~9.0.0-rc.5",
-    "@angular/compiler-cli": "~9.0.0-rc.5",
-    "@angular/language-service": "~9.0.0-rc.5",
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular/cli": "~9.0.1",
+    "@angular/compiler-cli": "~9.0.0",
+    "@angular/language-service": "~9.0.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.3",
